# Eisvogel

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  README.md
applications/: CMakeLists.txt
cmake/: CMakeLists.txt  setup.sh.in
cpython/: CMakeLists.txt  ccoordutils.pxd  ccurrent.pxd  cdistributedweightingfield.pxd  csignalcalculator.pxd  cweightingfield.pxd  cweightingfieldutils.pxd  eisvogel.pyx  libeisvogel.pxd  setup.py
cpython/tests/: test_point_charge_coulomb.py
eisvogel/: CMakeLists.txt
eisvogel/core/: AnalyticGreensFunctionCalculator.hh  Antenna.hh  CMakeLists.txt  Common.hh  Current.hh  Geometry.hh  SignalCalculator.hh  SignalExport.hh  Splashscreen.hh
eisvogel/core/impl/: AnalyticGreensFunctionCalculator.hxx  Antenna.hxx  CMakeLists.txt  Cache.hh  Cache.hxx  ChunkUtils.hh  Current.hxx  DefaultSerializationTraits.hxx  DistributedNDVecArray.hh  DistributedNDVecArray.hxx  Geometry.hxx  GreensFunction.hh  GreensFunction.hxx  Interpolation.hh  Interpolation.hxx  IteratorUtils.hh  MathUtils.hh  MathUtils.hxx  MemoryUtils.hh  NDVecArray.hh  NDVecArray.hxx  NDVecArrayOperations.hh  NDVecArrayOperations.hxx  NDVecArraySerialization.hh  NDVecArrayStreamer.hh  NDVecArrayStreamer.hxx  Quadrature.hh  RStarTree.hh  RStarTree.hxx  RTree.hh  RTree.hxx  Serialization.hh  Serialization.hxx  SignalCalculator.hxx  SignalExport.hxx  Splashscreen.hxx  Symmetry.hh  Symmetry.hxx  TypeUtils.hh  Vector.hh  (+2 more)
eisvogel/meep/: CMakeLists.txt  MEEPCylindricalGreensFunctionCalculator.hh
eisvogel/meep/impl/: MEEPCylindricalGreensFunctionCalculator.hxx
examples/: CMakeLists.txt
examples/coulomb/: CMakeLists.txt  coulomb.cxx  coulomb.py
examples/dipole_free_space/: CMakeLists.txt  dipole_free_space.cxx
examples/dipole_ice/: CMakeLists.txt  README.md  complicated_ice.csv  dipole_ice.cxx  run_dipole_ice.sbatch  run_dipole_ice.sh
examples/electric_dipole_antenna/: CMakeLists.txt  electric_dipole_antenna.cxx
examples/impacting_shower/: CMakeLists.txt  impacting_shower.cxx
examples/plot_greens_function/: CMakeLists.txt  animate_greens_function.py  config_example.yaml  export_greens_function.cxx  greens_function_absmax.py  greens_function_absmax_annotated.py  greens_function_still.py  plotting_utils.py
examples/plot_weighting_field/: plot_weighting_field.py
examples/point_charge_askaryan/: CMakeLists.txt  point_charge_askaryan.cxx  point_charge_askaryan_neutrino.cxx
examples/point_charge_cherenkov/: CMakeLists.txt  point_charge_cherenkov.cxx
examples/point_charge_coulomb/: CMakeLists.txt  point_charge_coulomb.cxx  point_charge_coulomb.py  point_charge_coulomb_segment.cxx
examples/shower_1D/: CMakeLists.txt  shower_profile_1D.cpp
examples/shower_2D/: CMakeLists.txt  shower_profile_2D.cpp
examples/shower_profile/: 01generate_weighting_field.cpp  02calculate_shower_emission.cpp  03_simple_shower.cpp  CMakeLists.txt  plot_results.py
examples/shower_profile_2d/: 02calculate_shower_emission2d.cpp  CMakeLists.txt
examples/surface_sweep/: CMakeLists.txt  surface_sweep.cxx
pyeisvogel/: ccoordutils.pxd  ccurrent.pxd  ckernels.pxd  cserialization.pxd  csignalcalculator.pxd  cweightingfield.pxd  eisvogel.pyx  kernels.pyx  libpyeisvogel.pxd  pyeisvogel.pyx  serialization.pyx  setup.py  weightingfield.pyx
python/: CMakeLists.txt  ccoordutils.pxd  ccurrent.pxd  csignalcalculator.pxd  cweightingfield.pxd  cweightingfieldutils.pxd  eisvogel.pyx  setup.py  weightingfield.pyx
shower_profile/: .gitignore  CMakeLists.txt  Makefile  charge_excess_profile.cpp  convert_shower_profile.py  main.cpp  shower_1D.cpp
shower_profile/charge_excess_profile/: CMakeLists.txt
shower_profile/environment/: ice_profile.h
shower_profile/shower_1D/: shower_1D.cpp  shower_1D.h
shower_profile/shower_creator/: shower_creator.cpp
signal/: CMakeLists.txt
signal/python/: CMakeLists.txt  ckernels.pxd  kernels.pyx  setup.py
signal/src/: CMakeLists.txt  Common.hh  CoordUtils.hh  DenseWeightingFieldProvider.cxx  DenseWeightingFieldProvider.hh  Integrator.cxx  Integrator.hh  Interpolator.cxx  Interpolator.hh  IteratorUtils.hh  Kernels.cxx  Kernels.hh  MathUtils.cxx  MathUtils.hh  NDArray.hh  Serialization.hh  SignalExport.hh  Trajectory.cxx  Trajectory.hh  WeightingField.hh  WeightingFieldProvider.hh  WeightingFieldUtils.cxx  WeightingFieldUtils.hh
signal/util/: CMakeLists.txt  compute_signal.cxx  save_weighting_field.cxx  test_interpolation.cxx
src/: Antenna.cxx  Antenna.hxx  AntennaOld.cxx  CMakeLists.txt  Cache.hh  Cache.hxx  Current.cxx  Current.hxx  CylindricalGreensFunctionCalculator.cxx  CylindricalGreensFunctionCalculator.hxx  CylindricalWeightingFieldCalculator.cxx  DefaultSerializationTraits.hxx  DenseNDArray.hh  DenseNDVecArray.hh  DenseNDVecArrayCompression.hh  DenseNDVecArraySerialization.hxx  DenseNDVecArrayStreamer.hh  DenseNDVecArrayStreamer.hxx  DistributedNDArray.hh  DistributedNDArray.hxx  DistributedNDVecArray.hh  DistributedNDVecArray.hxx  DistributedWeightingField.cxx  FieldStorage.cxx  FieldStorage.hh  Geometry.cxx  Geometry.hxx  GeometryOld.cxx  GreensFunction.hh  GreensFunction.hxx  GreensFunctionUtils.cxx  GreensFunctionUtils.hxx  H5Utils.cxx  Integrator.cxx  Integrator.hh  Integrator.hxx  IntegratorNew.hh  IntegratorNew.hxx  IntegratorOld.hh  IntegratorOld.hxx  (+36 more)
tests/internals/: CMakeLists.txt  testArrayOps.cxx  testCache.cxx  testCompression.cxx  testDenseNDArray.cxx  testDistributedNDVecArray.cxx  testDownsampling.cxx  testGreensFunction.cxx  testNDVecArray.cxx  testNDVecArrayInterpolation.cxx  testRStarTree.cxx  testRTree.cxx  testSparseNDArray.cxx  testVector.cxx  visualizeRStarTree.py
tests/io/: CMakeLists.txt  testDistributedNDArray.cxx  testDistributedNDArrayDiagnostics.cxx  testDistributedWeightingField.cxx  testHDF5.cxx  testSerialization.cxx
tests/physics/: CMakeLists.txt  testAskaryan.cxx  testCherenkov.cxx  testCoulomb.cxx
tests/physics/data/testAskaryan/: b_10_beta_0.99_tpeak_5.0_order_4.csv  b_10_beta_0.9_tpeak_5.0_order_4.csv
tests/physics/data/testCoulomb/: b_10_beta_0.99_tpeak_5.0_order_4.csv  b_5_beta_0.9_tpeak_5.0_order_4.csv
(+51 files in other folders)
