add_executable(compute_signal compute_signal.cxx)
add_executable(save_weighting_field save_weighting_field.cxx)
add_executable(test_interpolation test_interpolation.cxx)

target_link_libraries(compute_signal PUBLIC signal)
target_link_libraries(save_weighting_field PUBLIC signal)
target_link_libraries(test_interpolation PUBLIC signal)
