add_executable(testNDVecArray testNDVecArray.cxx)
target_link_libraries(testNDVecArray eisvogel)

add_executable(testCompression testCompression.cxx)
target_link_libraries(testCompression eisvogel)

add_executable(testDistributedNDVecArray testDistributedNDVecArray.cxx)
target_link_libraries(testDistributedNDVecArray eisvogel)

add_executable(testNDVecArrayInterpolation testNDVecArrayInterpolation.cxx)
target_link_libraries(testNDVecArrayInterpolation eisvogel)

add_executable(testGreensFunction testGreensFunction.cxx)
target_link_libraries(testGreensFunction eisvogel)

add_executable(testDownsampling testDownsampling.cxx)
target_link_libraries(testDownsampling eisvogel)

add_executable(testRTree testRTree.cxx)
target_link_libraries(testRTree eisvogel)
